# pico-clock

./: .clang-format  .clangd  .gitmodules  .nvim.lua  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
src/: clock.cpp
